kubernetes/projects/applications/apps/wardn-ai-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wardn-ai-website
  namespace: wardn
  labels:
    app.kubernetes.io/name: wardn-ai-website
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: wardn-ai
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wardn-ai-website
      app.kubernetes.io/component: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wardn-ai-website
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: wardn-ai
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: harbor-registry
      nodeSelector:
        kubernetes.io/arch: arm64
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: wardn-ai-website
                    app.kubernetes.io/component: frontend
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: wardn-ai-website
              app.kubernetes.io/component: frontend
      containers:
        - name: frontend
          # renovate: datasource=github-releases depName=abhi1693/wardn-ai-website
          image: registry.home/ghcr.io/abhi1693/wardn-ai-website:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 294Mi
            limits:
              memory: 448Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
